[gd_scene load_steps=5 format=2]

[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=1]
[ext_resource path="res://PreGameHUDRelated/TutorialHubScreen/SubPanels/TutorialDescriptionPanel.gd" type="Script" id=2]
[ext_resource path="res://PreGameHUDRelated/TutorialHubScreen/Assets/GreenLine_11x11.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=4]

[node name="TutorialDescriptionPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 180 )
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 11.0
margin_bottom = 180.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 169.0
margin_right = 180.0
margin_bottom = 180.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 180.0
margin_bottom = 11.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 169.0
margin_right = 180.0
margin_bottom = 180.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 180.0
margin_bottom = 180.0
mouse_filter = 2
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 165.0
margin_bottom = 165.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="TooltipBody" parent="MarginContainer/VBoxContainer/ScrollContainer" instance=ExtResource( 4 )]
margin_right = 150.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
default_font_color = Color( 1, 1, 1, 1 )
default_font_size = 15

[node name="PlayButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_left = 19.0
margin_top = 101.0
margin_right = 130.0
margin_bottom = 150.0
size_flags_horizontal = 6
text_for_label = "Play Tutorial"
[connection signal="on_button_released_with_button_left" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_on_button_released_with_button_left"]
